// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`database tests / person formatPersonRow 1`] = `
Object {
  "UUID": "valid-uuid",
  "birthday": "2021-03-12T11:16:56.000+00:00",
  "email": "valid-email",
  "firstName": "firstname",
  "id": 2,
  "lastName": "lastname",
  "nationality": "valid-nationality",
  "personalIdentityCode": "valid-personality-code",
  "phone": Object {
    "deserializedFields_": null,
    "fields_": Object {
      "1": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 5,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": true,
        "name_": "country_code",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "1",
      },
      "2": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": true,
        "fieldType_": 4,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": true,
        "name_": "national_number",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "2",
      },
      "3": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 9,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "extension",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "3",
      },
      "4": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 8,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "italian_leading_zero",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "4",
      },
      "5": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 9,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "raw_input",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "5",
      },
      "6": Object {
        "defaultValue_": 0,
        "deserializationConversionPermitted_": false,
        "fieldType_": 14,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "country_code_source",
        "nativeType_": Object {
          "FROM_DEFAULT_COUNTRY": 20,
          "FROM_NUMBER_WITHOUT_PLUS_SIGN": 10,
          "FROM_NUMBER_WITH_IDD": 5,
          "FROM_NUMBER_WITH_PLUS_SIGN": 1,
          "UNSPECIFIED": 0,
        },
        "parent_": [Function],
        "tag_": "6",
      },
      "7": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 9,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "preferred_domestic_carrier_code",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "7",
      },
      "8": Object {
        "defaultValue_": 1,
        "deserializationConversionPermitted_": false,
        "fieldType_": 5,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "number_of_leading_zeros",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "8",
      },
    },
    "lazyDeserializer_": null,
    "values_": Object {
      "1": 358,
      "2": 400000000,
      "5": "+358400000000",
      "6": 1,
    },
  },
  "timestamp": Object {
    "createdAt": "2021-03-12T11:16:56.000+00:00",
    "updatedAt": null,
  },
}
`;

exports[`database tests / person formatPersonRow updated 1`] = `
Object {
  "UUID": "valid-uuid",
  "birthday": "2021-03-12T11:16:56.000+00:00",
  "email": "valid-email",
  "firstName": "firstname",
  "id": 2,
  "lastName": "lastname",
  "nationality": "valid-nationality",
  "personalIdentityCode": "valid-personality-code",
  "phone": Object {
    "deserializedFields_": null,
    "fields_": Object {
      "1": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 5,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": true,
        "name_": "country_code",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "1",
      },
      "2": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": true,
        "fieldType_": 4,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": true,
        "name_": "national_number",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "2",
      },
      "3": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 9,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "extension",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "3",
      },
      "4": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 8,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "italian_leading_zero",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "4",
      },
      "5": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 9,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "raw_input",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "5",
      },
      "6": Object {
        "defaultValue_": 0,
        "deserializationConversionPermitted_": false,
        "fieldType_": 14,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "country_code_source",
        "nativeType_": Object {
          "FROM_DEFAULT_COUNTRY": 20,
          "FROM_NUMBER_WITHOUT_PLUS_SIGN": 10,
          "FROM_NUMBER_WITH_IDD": 5,
          "FROM_NUMBER_WITH_PLUS_SIGN": 1,
          "UNSPECIFIED": 0,
        },
        "parent_": [Function],
        "tag_": "6",
      },
      "7": Object {
        "defaultValue_": undefined,
        "deserializationConversionPermitted_": false,
        "fieldType_": 9,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "preferred_domestic_carrier_code",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "7",
      },
      "8": Object {
        "defaultValue_": 1,
        "deserializationConversionPermitted_": false,
        "fieldType_": 5,
        "isPacked_": false,
        "isRepeated_": false,
        "isRequired_": false,
        "name_": "number_of_leading_zeros",
        "nativeType_": [Function],
        "parent_": [Function],
        "tag_": "8",
      },
    },
    "lazyDeserializer_": null,
    "values_": Object {
      "1": 358,
      "2": 400000000,
      "5": "+358400000000",
      "6": 1,
    },
  },
  "timestamp": Object {
    "createdAt": "2021-03-12T11:16:56.000+00:00",
    "updatedAt": "2021-03-12T11:16:56.000+00:00",
  },
}
`;
